[package]
name = "taskly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorized = "1.0.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"