[package]
name = "taskly"
version = "0.1.3"
edition = "2021"
authors= ["Aryan Shetty"]
description= "A Todo app made in rust to keep track of all your tasks."
readme = "README.md"
repository = "https://github.com/Aryan7901/Taskly"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
dirs = "5.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
opt-level = "z"